Updated data generation

--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,31 @@
     "X = spst.bernoulli.rvs(1/(1+np.exp(-np.sum(Z,axis = 0))),size=N_patients)\n",
     "beta = 10\n",
     "eps = 0.5\n",
-    "Y = X* beta + np.sum(Z[50:,:]*Z[:50,:],axis = 0)+0.5*spst.norm.rvs(size=N_patients)"
+    "\n",
+    "Y0 = X* beta + np.sum(Z[50:75,:]*Z[75:,:],axis = 0)+0.5*spst.norm.rvs(size=N_patients)\n",
+    "Y1 = Y0 + np.sum(Z[25:50,:]*Z[:25,:],axis = 0)\n",
+    "\n",
+    "Y = (X==0)*Y0+(X==1)*Y1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2485.776013945906"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(Y[X==1])-np.mean(Y[X==0])"
    ]
   },
   {
